--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
-    "name": "Go Outside",
-    "version": "1.0",
-    "description": "Instead of doing another thing, go outside",
+    "name": "Go Outside...",
+    "version": "1.0.0",
+    "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
     "permissions": ["activeTab", "storage"],
     "options_page": "src/templates/options.html",
     "icons": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "src/images/logo_16.png",
+      "32": "src/images/logo_32.png",
+      "48": "src/images/logo_48.png",
+      "128": "src/images/logo_128.png"
     },
     "browser_action": {
+        "default_icon": "src/images/logo_128.png",
         "default_title": "Go outside"
     },
     "chrome_url_overrides": {
