add chrome store asserts and font-size update

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "Go Outside...",
+    "short_name": "Go Outside",
     "version": "1.0.0",
     "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
