--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,10 @@
     "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
     "permissions": ["activeTab", "storage"],
-    "options_page": "src/templates/options.html",
+    "options_ui": {
+        "page": "src/templates/options.html",
+        "open_in_tab": true
+    },
     "icons": {
       "16": "src/images/logo_16.png",
       "32": "src/images/logo_32.png",
@@ -19,5 +22,11 @@
     "chrome_url_overrides": {
         "newtab": "src/templates/newtab.html"
     },
-    "manifest_version": 2
+    "manifest_version": 2,
+    "applications": {
+      "gecko": {
+          "id": "go-outside@akmiller.co.uk",
+          "strict_min_version": "57.0a1"
+      }
+    }
 }
