--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
-    "permissions": ["activeTab", "storage"],
+    "permissions": ["storage"],
     "options_ui": {
         "page": "src/templates/options.html",
         "open_in_tab": true
