--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,11 @@
     "version": "1.1.1",
     "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
-    "permissions": ["storage"],
+    "permissions": ["tabs", "activeTab", "storage"],
+    "background": {
+        "persistent": false,
+        "scripts": ["background.js"]
+    },
     "options_ui": {
         "page": "src/templates/options.html",
         "open_in_tab": true
