--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "permissions": ["tabs", "storage"],
     "background": {
         "persistent": false,
-        "scripts": ["background.js"]
+        "scripts": ["src/js/background.js"]
     },
     "options_ui": {
         "page": "src/templates/options.html",
