--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,32 @@
     "version": "1.2.1",
     "description": "Instead of doing another screen based thing, go outside, see the world, a reminder to do the positive activities in life",
     "author": "Andrew Miller",
-    "permissions": ["tabs", "storage"],
+    "permissions": [
+        "tabs",
+        "storage"
+    ],
     "background": {
         "persistent": false,
-        "scripts": ["src/js/background.js"]
+        "scripts": [
+            "src/js/background.js"
+        ],
+        "service_worker": "src/js/background.js"
     },
     "options_ui": {
         "page": "src/templates/options.html",
         "open_in_tab": true
     },
     "icons": {
-      "16": "src/images/logo_16.png",
-      "32": "src/images/logo_32.png",
-      "48": "src/images/logo_48.png",
-      "128": "src/images/logo_128.png"
+        "16": "src/images/logo_16.png",
+        "32": "src/images/logo_32.png",
+        "48": "src/images/logo_48.png",
+        "128": "src/images/logo_128.png"
     },
     "browser_action": {
+        "default_icon": "src/images/logo_128.png",
+        "default_title": "Go outside"
+    },
+    "action": {
         "default_icon": "src/images/logo_128.png",
         "default_title": "Go outside"
     },
@@ -30,12 +40,12 @@
         "src/templates/newtab.html",
         "src/js/newtab.js"
     ],
-    "manifest_version": 2,
+    "manifest_version": 3,
     "incognito": "split",
     "applications": {
-      "gecko": {
-          "id": "go-outside@akmiller.co.uk",
-          "strict_min_version": "57.0a1"
-      }
+        "gecko": {
+            "id": "go-outside@akmiller.co.uk",
+            "strict_min_version": "57.0a1"
+        }
     }
 }
